# uv-tutorial-app

./: README.md  Untitled.ipynb  main.py  pyproject.toml
