[project]
name = "uv-tutorial-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "numpy==2.3.1",
    "uv-tutorial-lib",
]

[tool.uv.sources]
uv-tutorial-lib = { git = "https://github.com/mariusarvinte/uv-tutorial-lib", rev = "51c6cebe41184e0b1579c0ef7f491a3e20b300ae" }

